--- a/styles.css
+++ b/styles.css
@@ -3,36 +3,26 @@ body {
   font-size: 20px;
 }
 
-table {
-
+.container {
+  display: flex;
+  justify-content: center;
 }
 
-th, td {
+.box {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  background-color: blueviolet;
+  transition: transform 1s, border-radius 1s 1s;
+}
+.box:first-child {
+  transition-timing-function: ease-in;
+}
+.box:last-child {
+  transition-timing-function: ease-out;
 }
 
-label {
-  position: relative;
-  padding-left: 20px;
-}
-
-#user-name {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-}
-
-#user-name + label::before {
-  content: ' ';
-  height: 12px;
-  width: 12px;
-  border: 1px solid #ccc;
-  position: absolute;
-  left: 0;
-  top: 5px;
-  border-radius: 1px;
-  font-size: 14px;
-}
-#user-name:checked + label::before {
-  content: '\2713';
+.container:hover .box {
+  transform: translateY(200px);
+  border-radius: 50%;
 }
