--- a/box.css
+++ b/box.css
@@ -9,20 +9,17 @@ body {
 }
 
 .box {
-  display: inline-block;
   height: 100px;
   width: 100px;
   background-color: blueviolet;
-  transition: transform 1s, border-radius 1s 1s;
-}
-.box:first-child {
-  transition-timing-function: ease-in;
-}
-.box:last-child {
-  transition-timing-function: ease-out;
+  transition: transform 300ms, width 300ms .3s, border-radius .3s .6;
 }
 
 .container:hover .box {
   transform: translateY(200px);
   border-radius: 50%;
+  width: 150px;
+  background-color: yellow;
 }
+
+
