--- a/nav.css
+++ b/nav.css
@@ -2,36 +2,34 @@ body {
   margin: 0;
   font-size: 20px;
 }
-
 ul, li { list-style-type: none; padding: 0; margin: 0; }
-
-
 a { color: #E00; display: block; padding: 0.5em 1em; text-decoration: none; }
 a:hover { color: #F55; }
 nav { background: #EEE; text-align: center; }
 li { display: inline-block;}
 
 
+
 .menu-item {
   position: relative;
 }
 .menu-item > a {
+  background: #EEE;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 .sub-menu { 
   background-color: #ddd;
+  position: absolute;
   opacity: 0;
   pointer-events: none;
-  position: absolute;
+  transition: all 500ms;
   transform: translateY(-100px);
-  transition: all 0.3s ease-in-out 0s;
 }
 
-.menu-item:focus .sub-menu,
-.menu-item:focus-within .sub-menu,
-.menu-item:hover .sub-menu {
+.menu-item:hover .sub-menu,
+.menu-item:focus-within .sub-menu {
+  opacity: 1;
   pointer-events: initial;
   transform: translateY(0);
-  opacity: 1;
 }
